# unirewrite

./: README.md  unirewrite.cabal
src/: .gitignore  Env.hs  Eval.hs  Function.hs  Index.hs  Match.hs  Pattern.hs  Pretty.hs  Rule.hs  Strategy.hs  Term.hs  Unirewrite.hs
test/: Test.hs
