name:                unirewrite
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2012 Stephen Diehl
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
    Eval,
    Function
    Index,
    Match,
    Pretty,
    Strategy,
    Term
  Cc-options:          
  -- Ghc-options:        -Wall
  build-depends:       
      base >=4.6 && <4.7
    , transformers
    , containers
    , mtl
    , uniplate >= 1.6.12
    , hashtables >= 1.1.2
    , pretty >= 1.1.1
    , pretty-show >= 1.6  && <1.7
  default-language:    Haskell2010
  Hs-source-dirs:      src
